Unit testing on BookingController